Change the layout

--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 /* Typography */
-/* 1. Use a more-intuitive box-sizing model */
+/* Use box-sizing model */
 *,
 *::before,
 *::after {
     box-sizing: border-box;
 }
 
-/* 2. Remove default margin */
+/* Remove default margin & padding */
+/* Set required font */
 * {
     margin: 0;
+    padding: 0;
+    font-family: "Outfit", Arial, Helvetica, sans-serif;
 }
 
 /* Allow percentage-based heights */
@@ -17,138 +20,89 @@ body {
     height: 100%;
 }
 
-/* 3. Enable keyword animations */
-@media (prefers-reduced-motion: no-preference) {
-    html {
-        interpolate-size: allow-keywords;
-    }
-}
-
 body {
-    /* 4. Add accessible line-height */
+    /* Add accessible line-height */
     line-height: 1.5;
-    /* 5. Improve text rendering */
-    -webkit-font-smoothing: antialiased;
 }
 
-/* 6. Improve media defaults */
+/* Improve media defaults */
 img,
-picture,
-video,
-canvas,
-svg {
+picture {
     display: block;
     max-width: 100%;
 }
 
-/* 7. Inherit fonts for form controls */
-input,
-button,
-textarea,
-select {
-    font: inherit;
-}
 
-/* 8. Avoid text overflows */
+
+/* Avoid text overflows */
 p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1 {
     overflow-wrap: break-word;
 }
 
-/* 9. Improve line wrapping */
+/* Improve line wrapping */
 p {
     text-wrap: pretty;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1 {
     text-wrap: balance;
-}
-
-h1,
-h2,
-h3 {
     line-height: 1.1;
 }
+
 
 /* Custom CSS */
 
 .body-container {
-    display: grid;
-    grid-template: 1fr / 1fr;
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: 100%;
-    font-family: "outfit", Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    font-weight: 400;
     background-color: hsl(212, 45%, 89%);
 }
 
-@media screen and(min-width: 320px) {
-    .body-container {
-        max-width: 1440px;
-    }
-
-    .qrcode {
-        max-width: 375px;
-    }
-}
-
 .qrcode {
-    width: 320px;
+    max-width: 320px;
     padding: 1rem;
     background-color: hsl(0, 0%, 100%);
     border-radius: 1rem;
-    overflow: hidden;
-    box-shadow: 0px 0px 5px 1px hsl(212, 45%, 89%);
 }
 
-.qrcode__content {
-    margin: 1rem;
+.qrcode-content {
+    margin: 1.5rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     gap: 1rem;
-}
-
-.qrcode__img {
-    margin: 0;
-}
-
-.qr-img {
-    width: 100%;
-    border-radius: 10px;
-}
-
-.qrcode__title,
-.qrcode__title2 {
     text-align: center;
 }
 
-.qrcode__title {
+.qrcode-pic {
+    margin: 0;
+}
+
+.qrcode-pic-img {
+    width: 100%;
+    border-radius: 0.625rem;
+}
+
+.qrcode-h1 {
+    font-size: 1.4rem;
     font-weight: 700;
     color: hsl(218, 44%, 22%);
 }
 
-.qrcode__title2 {
+.qrcode-p {
+    font-size: 0.938rem;
     font-weight: 400;
     color: hsl(216, 15%, 48%);
 }
 
 .attribution {
-    font-size: 11px;
     text-align: center;
+    font-size: 0.688rem;
 }
 
 .attribution a {
